CDR-1512 Migrate tests to JUnit5